<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_find_people"
            android:icon="@drawable/ic_baseline_explore_24"
            android:title="@string/find_people" />

        <item
            android:id="@+id/nav_add_people"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/add_people" />

        <item
            android:id="@+id/nav_token"
            android:icon="@drawable/ic_baseline_developer_board_24"
            android:title="@string/token" />

    </group>
    <item android:title="System">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>